--- a/src/assets/styles/components/Navegation.scss
+++ b/src/assets/styles/components/Navegation.scss
@@ -24,15 +24,8 @@
     flex-direction: row;
     justify-content: flex-end;
     padding: 10px;
-}
-
-.navegation__period__list{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 10px;
-    margin-bottom: 0px;
-    border-radius: 10px;
+    cursor: pointer;
+    outline: none;
 }
 
 .navegation__period__current{
@@ -41,9 +34,11 @@
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
+    cursor: pointer;
+    outline: none;
 }
 
-.navegation__period:hover .navegation__period__list, .navegation__period__list:hover{
+.navegation__period.active:hover .navegation__period__list{
     display: flex;
 }
 
@@ -52,6 +47,8 @@
     width: 25px;
     color: white;
 }
+
+
 
 .navegation__period__list{
     display: none;
@@ -62,9 +59,10 @@
     right: 25px;
     text-align: right;
     background-color: rgba($color-principal,1);
-    
+    overflow: scroll;
+    max-height: 200px;
+    border-radius: 10px;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     z-index: 0;
     border: 6px solid white;
