Funcionalidad en el detalle para mostrar los saldos globales

--- a/src/assets/styles/components/Navegation.scss
+++ b/src/assets/styles/components/Navegation.scss
@@ -17,6 +17,14 @@
     justify-content: flex-start;
     padding-left: 10px;
 }
+.navegation__account__item:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.navegation__account__item:focus{
+    outline: none;
+}
 
 .navegation__period{
     display: flex;
