Se agrega la funicionalidad para ver el detalle de movimientos de cuentas

--- a/src/assets/styles/components/Detail.scss
+++ b/src/assets/styles/components/Detail.scss
@@ -41,7 +41,7 @@
 
 .detail__body__table{
     width: 100%;
-    border-collapse: collapse;
+    border-spacing: 1px;
 }
 
 .detail__body__table__column--date{
