--- a/src/assets/styles/components/DetailModal.scss
+++ b/src/assets/styles/components/DetailModal.scss
@@ -3,7 +3,7 @@
 .detail__modal{
     width: 100%;
     height: 100vh;
-    background: rgba($color-secundary,0.3);
+    background: rgba($color-secundary,0.7);
     border: 1px solid rgba($color-principal,1);
     z-index: 10000;
     display: flex;
@@ -16,8 +16,8 @@
 }
 
 .detail__modal__wrapper{
-    width: 80%;
-    height: 80%;
+    width: 70%;
+    height: 60%;
     background: rgba($color-principal,1);
     display: flex;
     flex-direction: column;
@@ -25,14 +25,15 @@
     align-items: center;
     position: fixed;
     border-radius: 10px;
-    padding: 6px;
+    padding: 4px;
 }
 
 .detail__modal__wrapper__title{
     background-color: rgba($color-secundary,1);
+    border: 2px solid white;
     color: white;
     width: 100%;
-    height: 30px;
+    height: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,10 +44,11 @@
 .detail__modal__wrapper__title--img{
     margin-right: 6px;
     border-radius: 5px;
+    background-color: white;
 }
 
 .detail__modal__wrapper__title--img:hover{
-    background: rgba($color-principal,0.5);
+    background: rgba($color-principal,0.3);
     cursor: pointer;
 }
 .detail__modal__wrapper__title--img:focus{
@@ -57,11 +59,18 @@
 .detail__modal__wrapper__body{
     background-color: white;
     width: 100%;
+    border: 6px white solid;
     height: calc(100% - 30px);
     overflow: scroll;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.detail__modal__body__table{
+    width: 100%;
+    border-spacing: 1px;
+    margin-bottom: 6px;
 }
