--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -16,6 +16,22 @@
     width: 200px;
 }
 
+.header__session{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    height: 100%;
+    justify-content: space-between;
+}
+
+.header__session--clouse{
+    color: rgba($color-secundary, 1);
+}
+
+.header__session--clouse:hover{
+    color: rgba($color-secundary, 1);
+}
+
 .header__menu{
     color: black;
     display: flex;
