Se agrega el formato de welcome

--- a/src/assets/styles/NotFound.scss
+++ b/src/assets/styles/NotFound.scss
@@ -1,6 +1,6 @@
 @import "./Vars.scss";
 
-.home .main{
+.notfound .main{
     background-color: rgba(white,1);
     display: flex;
     justify-content: center;
