Se agregan los archvicos iniciales de la configuracion de Docker

--- a/src/assets/styles/Login.scss
+++ b/src/assets/styles/Login.scss
@@ -41,7 +41,7 @@
 }
 
 .login__form__body input{
-    width: 230px;
+    width: 80%;
     margin: 10px;
     height: 30px;
     padding: 5px;
@@ -50,7 +50,7 @@
 }
 
 .login__form__body button{
-    width: 230px;
+    width: 80%;
     margin: 10px;
     height: 30px;
     background-color: rgba($color-principal,1);
